--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "require-dev": {
         "phpspec/phpspec": "~2.2",
         "memio/spec-gen": "~0.4",
-        "silex/silex": "~2.0"
+        "silex/silex": "~2.0",
+        "escapestudios/symfony2-coding-standard": "3.x-dev",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "license": "MIT",
     "authors": [
